fix(AddressEdit): incorrect label wrap on safari (#6969)

--- a/src/style/var.less
+++ b/src/style/var.less
@@ -255,7 +255,7 @@
 @contact-edit-buttons-padding: @padding-xl 0;
 @contact-edit-button-margin-bottom: @padding-sm;
 @contact-edit-button-font-size: 16px;
-@contact-edit-field-label-width: 4em;
+@contact-edit-field-label-width: 4.1em;
 
 // ContactList
 @contact-list-edit-icon-size: 16px;
